--- a/backend/package.json
+++ b/backend/package.json
@@ -19,5 +19,10 @@
     "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
