Restaurant update info/update location FE+BE

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,6 +22,8 @@
         "react"
     ],
     "rules": {
-        "max-len": "off"
+        "max-len": "off",
+        "react/prop-types": "off",
+        "jsx-quotes": "off"
     }
 }
