Dishes component BE/FE

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,6 +24,7 @@
     "rules": {
         "max-len": "off",
         "react/prop-types": "off",
-        "jsx-quotes": "off"
+        "jsx-quotes": "off",
+        "no-console": "off"
     }
 }
